--- a/curso-maquetacion-css-grid/css/index.css
+++ b/curso-maquetacion-css-grid/css/index.css
@@ -1,7 +1,8 @@
 @import url("styles.css");
 
 .main {
-    background-image: url("/assets/images/cover.png");
+    height: 100vh;
+    background-image: url("../assets/images/cover.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
