--- a/curso-maquetacion-css-grid/css/styles.css
+++ b/curso-maquetacion-css-grid/css/styles.css
@@ -12,7 +12,7 @@ html {
 
 :root {
     --primary-color: #47cfac;
-    --secondary-color: #cdd2da;
+    --secondary-color: #f5f5f5;
     --white: #ffffff;
     --black: #000000;
     --font-sm: 14px;
@@ -22,7 +22,7 @@ html {
 }
 
 .hero-container {
-   height: 100vh;
+
 
     display: grid;
     grid-template-columns: repeat(2, 1fr);
